# rust-monorepo-app

./: .Dockerfile  .env.example  .gitignore  Cargo.toml  LICENSE  README.md  project.json
src/: main.rs
src/modules/post/: handler.rs  mod.rs  models.rs  repository.rs  services.rs  usecase.rs
src/utils/: mod.rs  response_builder.rs
