[package]
name = "kaspro-customer"
version = "0.1.0"
edition = "2021"
repository = "{your apps repo link}"

[dependencies]
actix-cors = "0.7"
actix-web = "4.2.1"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = [
    "runtime-async-std-native-tls",
    "postgres",
    "uuid",
    "chrono",
] }
uuid = { version = "1.2", features = ["serde", "v4"] }
validator = { version = "0.19.0", features = ["derive"] }
argon2 = "0.5.3"
jsonwebtoken = "9.3.0"
futures = "0.3.31"
redis = "0.27.6"
lapin = "2.5.0"
r2d2_redis = "0.14.0"
deadpool-lapin = "0.12.1"
cronjob = "0.4.17"
kafka = "0.10.0"
once_cell = "1.20.2"
logger_libs = { path = "../../libs/logger_libs" }
